<resources>
    <string name="app_name">Grabbit</string>
    //Menu items
    <string name="navigationAccount">Account</string>
    <string name="navigationHome">Home</string>
    <string name="navigationCart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="grabbitlogo">grabbitlogo</string>
    <string name="signup">signup</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>

    //Cart
    <string name="appBarCart">Cart</string>
    <string name="cartInstructions">1. Refresh the list\n 2. Search for bluetooth device named 20-18-08-34-F7-3C\n 3. Connect to 20-18-08-34-F7-3C\n 4. After successful connection click on start dispensing   item</string>
    <string name="scan_qr_code_to_get_product_list">Scan QR code to get product list</string>
    <string name="scan">Scan</string>
    <string name="transactions">Transactions</string>
    <string name="add_balance">Add balance</string>
    <string name="item_purchased">Item purchased</string>

    //BottomNavigation
    <string name="bnHome">Home</string>
    <string name="bnCart">Cart</string>
    <string name="bnAccount">Profile</string>

    <string name="productContentDescription">Product Image</string>
    <string name="noDataAvailable">No products in cart</string>

    <string name="doNoRefreshPageMessage">Please do not press back button or refresh page</string>

    //Paytm
    <string name="processingTransaction">Please do not press back button or refresh page \nProcessing Paytm Transaction</string>

    <string name="transactionDetails">Transaction Details</string>

    <string name="itemDispenseScreenName">Item Dispensing</string>
    <string name="paymentMode">Payment mode: </string>
    <string name="quantity">Quantity: </string>
    <string name="itemPurchasedQuantity">1</string>
    <string name="noTransactionsDone">No transactions done</string>
    <string name="logout">Logout</string>
    <string name="operatorLogin">Operator Login</string>
    <string name="welcomeOperator">Welcome \nOperator</string>
    <string name="ProductHolder">Product name</string>
    <string name="KioskId">Kiosk ID</string>
    <string name="LoadData">Load Data\t</string>
    <string name="ProductDetailPage">Product detail</string>
    <string name="KioskIdTemplate">Kiosk Id %s</string>
    <string name="ProductName">Product name : %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    ": $product!!.KioskID"-->

</resources>
