<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:background="@color/white">
    <View
        android:id="@+id/view_divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/white"
        >
    </View>
    <LinearLayout
        android:id="@+id/ll_item_list_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_divider_bottom"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_item_to_cart">

        <ImageView
            android:visibility="invisible"
            android:contentDescription="@string/productContentDescription"
            android:id="@+id/img_td_item_image"
            android:layout_width="30dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/coke" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="top"
                android:fontFamily="@font/sofia_pro_semi_bold"
                android:id="@+id/txt_td_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="Coke"
                android:textColor="@color/homeTxtProductHeading"
                android:textSize="18sp"
                />

            <TextView
                android:fontFamily="@font/sofia_pro_regular"
                android:id="@+id/txt_td_item_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/homeTxtProductHeading"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:text="Rs 40"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:fontFamily="@font/sofia_pro_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/homeTxtProductHeading"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/paymentMode"
                    android:textSize="18sp"/>
                <TextView
                    android:fontFamily="@font/sofia_pro_regular"
                    android:id="@+id/txt_payment_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/homeTxtProductHeading"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="Cash"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    >
                </TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/sofia_pro_regular"
                    android:text="@string/quantity"
                    android:textColor="@color/homeTxtProductHeading"
                    android:textSize="18sp" />
                <TextView

                    android:id="@+id/txt_td_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/sofia_pro_regular"
                    android:text="@string/itemPurchasedQuantity"
                    android:textColor="@color/homeTxtProductHeading"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
<!--    <ImageButton-->
<!--        android:id="@+id/btn_add_item_to_cart"-->
<!--        android:padding="5dp"-->
<!--        android:layout_width="35dp"-->
<!--        android:layout_height="35dp"-->
<!--        android:src="@drawable/ic_add_black_24dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:background="@drawable/scan_qr_code_circle_btn_background">-->
<!--        &lt;!&ndash;        android:foreground="?android:attr/selectableItemBackground">&ndash;&gt;-->
<!--    </ImageButton>-->
</androidx.constraintlayout.widget.ConstraintLayout>