<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".operator.opProductDetailPage.OpProductDetailPage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradientbackgroundprofile"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sofia_pro_semi_bold"
            android:text="@string/ProductDetailPage"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_product_detail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="TODO"
        android:src="@drawable/coke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home">
    </ImageView>

    <TextView
        android:id="@+id/txt_kiosk_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:ems="15"
        android:fontFamily="@font/sofia_pro_regular"
        android:paddingLeft="5dp"
        android:text="@string/KioskId"
        android:textColor="@color/colorDarkGray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_product_detail"
        >
    </TextView>

    <TextView
        android:id="@+id/txt_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        android:ems="15"
        android:fontFamily="@font/sofia_pro_regular"
        android:paddingLeft="5dp"
        android:text="@string/ProductHolder"
        android:textColor="@color/colorDarkGray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_kiosk_id">
    </TextView>

    <EditText
        android:id="@+id/ed_column_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="15dp"
        android:ems="15"
        android:fontFamily="@font/sofia_pro_regular"
        android:hint="Enter Column number"
        android:paddingLeft="5dp"
        android:textColor="@color/colorDarkGray"
        android:textColorHint="#999"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_product_name" />

    <EditText
        android:id="@+id/ed_tray_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:drawablePadding="5dp"
        android:ems="15"
        android:fontFamily="@font/sofia_pro_regular"
        android:hint="Enter Tray Id"
        android:inputType="number"
        android:paddingLeft="5dp"
        android:textColor="@color/colorDarkGray"
        android:textColorHint="#999"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_column_number" />
    <EditText
        android:id="@+id/ed_quantity_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:drawablePadding="5dp"
        android:ems="15"
        android:fontFamily="@font/sofia_pro_regular"
        android:hint="Enter quantity"
        android:paddingLeft="5dp"
        android:textColor="@color/colorDarkGray"
        android:textColorHint="#999"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tray_id" />

    <TextView
        android:id="@+id/btn_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/scan_qr_code_circle_btn_background"
        android:drawableEnd="@drawable/ic_arrow_forward_black_24dp"
        android:drawableTint="@color/white"
        android:padding="20dp"
        android:text="@string/LoadData"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_quantity_id" />

    <ProgressBar
        android:id="@+id/pb_product_detail_page"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>